    file, so that no unnecessary directories are created in the CGI directory.
  * debian/rules: recreate empty documentation directories if needed to ease 
    working with a git repository.
  * Split the monolithic configuration file into configuration snippets
    in /etc/smokeping/config.d. See NEWS.Debian. (Closes: #473223)
    + debian/patches/20_conffile.dpatch: removed
  * Install the upstream config template in /usr/share/doc too, because
    smokeping_examples(7) says so and it doesn't hurt.
  * Update debian/copyright.

 -- Niko Tyni <ntyni@debian.org>  Tue, 11 Mar 2008 22:30:04 +0200

smokeping (2.3.2-1) unstable; urgency=low

  * New upstream release. (Closes: #468928)
  * Add support for the new "slave mode", enabled via 
    /etc/default/smokeping. (Closes: #466533)
  * debian/patches/30_slave_piddir.dpatch: Add an optional 
    --pid-dir option to specify the pid directory when running as a slave.
  * Change the doc-base section to Network/Monitoring. Thanks, lintian.

 -- Niko Tyni <ntyni@debian.org>  Tue, 04 Mar 2008 23:36:58 +0200

smokeping (2.3.0-1) unstable; urgency=low

  * New upstream version.
    + new dependency on liburi-perl
    + debian/patches/30_jszoom.dpatch: removed, applied upstream.

 -- Niko Tyni <ntyni@debian.org>  Thu, 24 Jan 2008 23:27:29 +0200

smokeping (2.2.7-2) unstable; urgency=low

  * debian/patches/30_jszoom.dpatch: fix a javascript error
    on pages without a zoom widget. (Closes: #457071)
  * Change my maintainer email address.
  * Upgrade to Standards-Version 3.7.3. No changes needed.
  * Add two short patch descriptions in debian/patches.
  * Don't install an empty /usr/bin directory.

 -- Niko Tyni <ntyni@debian.org>  Sun, 23 Dec 2007 20:57:49 +0200

smokeping (2.2.7-1) unstable; urgency=low

  * New upstream release
  * Create /var/run/smokeping at startup if it doesn't exist.
    Patch from Ubuntu.

 -- Niko Tyni <ntyni@iki.fi>  Sat, 10 Nov 2007 09:55:32 +0200

smokeping (2.2.6-1) unstable; urgency=low
